Add Star64 to download page
and add a direkt image download link to the VisionFive 2 tile

--- a/index.html
+++ b/index.html
@@ -1708,12 +1708,34 @@
 								<div><span>NET:</span>2x Gbit Ethernet</div>
 								<div><span>Storage:</span>microSD, eMMC and M.2 sockets</div>
 								<br>
+								<div><a href="https://dietpi.com/downloads/images/testing/DietPi_VisionFive2-RISC-V-Sid.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/testing/DietPi_VisionFive2-RISC-V-Sid.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/testing/DietPi_VisionFive2-RISC-V-Sid.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/blog/?p=2629" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div><a href="https://github.com/MichaIng/DietPi/issues/6212" target="_blank" rel="noopener"><span>Testing feedback:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>A first experimental DietPi RISC-V image for the StarFive VisionFive 2 SBC. Please read the instructions given in our blog post lived above. Note that this is at best alpha state on all levels, DietPi, Debian and Linux.</p>
+							<p>A first experimental DietPi RISC-V image for the StarFive VisionFive 2 SBC. Please read the instructions given in our blog post linked above. Note that this is at best alpha state on all levels, DietPi, Debian and Linux.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/visionfive2.jpg" alt="VisionFive 2 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- Star64 -->
+				<div id="star64" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Star64 (experimental)</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>StarFive JH7110 1.5 GHz | 4 cores | RISC-V 64-bit</div>
+								<div><span>RAM:</span>2 GiB - 8 GiB LPDDR4</div>
+								<div><span>USB:</span>1x USB 3.0, 2x USB 2.0</div>
+								<div><span>NET:</span>2x Gbit Ethernet</div>
+								<div><span>Storage:</span>microSD and eMMC socket</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/testing/DietPi_Star64-RISC-V-Sid.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/testing/DietPi_Star64-RISC-V-Sid.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/testing/DietPi_Star64-RISC-V-Sid.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/blog/?p=2629" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://github.com/MichaIng/DietPi/issues/6212" target="_blank" rel="noopener"><span>Testing feedback:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A first experimental DietPi RISC-V image for the PINE64 Star64 SBC. Please read the instructions given in our blog post linked above. Note that this is at best alpha state on all levels, DietPi, Debian and Linux.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/star64.jpg" alt="Star64 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
@@ -1841,6 +1863,13 @@
 							<img src="images/sbc_images/soquartz.jpg" alt="SOQuartz photo" width="8" height="5" loading="lazy">
 							<h3>SOQuartz</h3>
 							<p>RK3566 1.8GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix pine riscv">
+						<a href="#downloadinfo" class="thumbnail" rel="#star64">
+							<img src="images/sbc_images/star64.jpg" alt="Star64 photo" width="8" height="5" loading="lazy">
+							<h3>Star64 (experimental)</h3>
+							<p>JH7110 1.5 GHz | 4 cores | RISC-V</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
@@ -2119,7 +2148,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix riscv">
 						<a href="#downloadinfo" class="thumbnail" rel="#visionfive2">
 							<img src="images/sbc_images/visionfive2.jpg" alt="VisionFive 2 photo" width="8" height="5" loading="lazy">
-							<h3>VisionFive 2</h3>
+							<h3>VisionFive 2 (experimental)</h3>
 							<p>JH7110 1.5 GHz | 4 cores | RISC-V</p>
 						</a>
 					</div>
