Update release slide

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.1 has been released</h2>
+					<h2>DietPi v9.2 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Raspberry Pi 5 images available for testing. ROCK 4 SE support added, NanoPi R5S/R5C/R6S/R6C/T6 images reworked with Armbian-based kernel/bootloader. Many bug fixes for software titles and filesystem expansion on Bullseye.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_1/" target="_blank" rel="noopener">Release notes</a>
+					<p>The DietPi login banner can now show the current RAM usage. Enhanced concurrency detection and handling for our scripts. Fixed disappearing Ethernet adapter on NanoPi R4S, HDMI audio with KMS on RPi, and many other bugs.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_2/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
