Add ROCK 4C Plus to download page

--- a/index.html
+++ b/index.html
@@ -689,11 +689,15 @@
 								<br>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_ROCKPi4-ARMv8-Bookworm.img.xz"><span>ROCK 4 Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ROCKPi4-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ROCKPi4-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)
-									<br>This image supports the ROCK 4A/4B/4C Plus and non-Plus variants, as far as it as been tested.
+									<br>This image supports the ROCK 4A/4B/4C and 4A/4B Plus variants, as far as it as been tested.
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_ROCK4SE-ARMv8-Bookworm.img.xz"><span>ROCK 4 SE Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ROCK4SE-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ROCK4SE-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)
 									<br>This image supports the ROCK 4 SE variant only.
+								</div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_ROCK4CPlus-ARMv8-Bookworm.img.xz"><span>ROCK 4C Plus Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ROCK4CPlus-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ROCK4CPlus-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)
+									<br>This image supports the ROCK 4C Plus variant only.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
