Add DietPi Beta v9.4 slide

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.3 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>This release comes with the implementation of an own APT repository at <a href="https://dietpi.com/apt/" target="_blank" rel="noopener">https://dietpi.com/apt/</a>, to simplify updates of certain software titles and own kernel/bootloader packages.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_3/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v9.4 is ready</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>Support added for Orange Pi 3 LTS and Zero 2W, as well as Radxa ZERO 3 and ROCK 4C Plus; M.2 WiFi module support for NanoPi R5C; Fixed IPVanish support in dietpi-vpn</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7060" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
