Address spellcheck annotations

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi Beta v9.4 is ready</h2>
 					<h4>Please help testing our upcoming release</h4>
-					<p>Support added for Orange Pi 3 LTS and Zero 2W, as well as Radxa ZERO 3 and ROCK 4C Plus; M.2 WiFi module support for NanoPi R5C; Fixed IPVanish support in dietpi-vpn</p>
+					<p>Support added for Orange Pi 3 LTS and Zero 2W, as well as Radxa ZERO 3 and ROCK 4C Plus; M.2 WiFi module support for NanoPi R5C; Fixed IPVanish support in <code>dietpi-vpn</code></p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7060" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
