Fix and complement new SBC downloads

--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
 					</div>
 				</div>
 				<!-- Radxa ZERO 3 -->
-				<div id="radxazero" class="single-project">
+				<div id="radxazero3" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Radxa ZERO 3</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1621,7 +1621,7 @@
 					</div>
 				</div>
 				<!-- Orange Pi 3 LTS -->
-				<div id="orangepi3b" class="single-project">
+				<div id="orangepi3lts" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi LTS</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1642,7 +1642,8 @@
 							<p>A credit card sized SBC with older Allwinner H6 SoC. Since the similarly featured Orange Pi 3B is available with faster CPU, RAM and otherwise similar hardware features/aspects, is available for minimal surcharge, there is probably not really a reason to buy this anymore. But if you have one, we got you covered.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orangepi3lts.jpg" alt="Orange Pi LTS photo" width="8" height="5" loading="lazy"></div>
-					
+					</div>
+				</div>
 				<!-- Orange Pi 3B -->
 				<div id="orangepi3b" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 3B</h3><span class="close"></span></div></div>
@@ -1727,7 +1728,7 @@
 								<div><span>NET:</span>Gbit Ethernet + onboard WiFi 5/Bluetooth</div>
 								<div><span>Storage:</span>microSD</div>
 								<br>
-								<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz"><span>1/2/4 GB RAM Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz"><span>1/2/4 GB RAM Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero3-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -1740,7 +1741,7 @@
 					</div>
 				</div>
 				<!-- Orange Pi Zero 2W -->
-				<div id="orangepizero3" class="single-project">
+				<div id="orangepizero2w" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi Zero 2W</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1751,7 +1752,7 @@
 								<div><span>NET:</span>Onboard WiFi 5/Bluetooth</div>
 								<div><span>Storage:</span>microSD</div>
 								<br>
-								<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz"><span>1/2/4 GB RAM Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz"><span>1/2/4 GB RAM Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiZero2W-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -1961,6 +1962,13 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
+						<a href="#downloadinfo" class="thumbnail" rel="#radxazero3">
+							<img src="images/sbc_images/radxazero3.jpg" alt="Radxa ZERO 3 photo" width="8" height="5" loading="lazy">
+							<h3>Radxa ZERO 3</h3>
+							<p>K3566 1.6 GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
 						<a href="#downloadinfo" class="thumbnail" rel="#rock3a">
 							<img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy">
 							<h3>ROCK 3A</h3>
@@ -1979,6 +1987,13 @@
 							<img src="images/sbc_images/rock5a.jpg" alt="ROCK 5A photo" width="8" height="5" loading="lazy">
 							<h3>ROCK 5A</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepi3lts">
+							<img src="images/sbc_images/orangepi3lts.jpg" alt="Orange Pi 3 LTS photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi 3 LTS</h3>
+							<p>H6 1.8 GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
@@ -2006,6 +2021,13 @@
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepizero3">
 							<img src="images/sbc_images/orangepizero3.jpg" alt="Orange Pi Zero 3 photo" width="8" height="5" loading="lazy">
 							<h3>Orange Pi Zero 3</h3>
+							<p>H618 1.5GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepizero2w">
+							<img src="images/sbc_images/orangepizero2w.jpg" alt="Orange Pi Zero 2W photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi Zero 2W</h3>
 							<p>H618 1.5GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
