Update Raspberry Pi 4 => 5 comparison

--- a/stats.html
+++ b/stats.html
@@ -114,7 +114,7 @@
 									<tr><td>Log files</td><td class="win">RAM disk (tmpfs)</td><td></td><td class="los">rootfs</td></tr>
 									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
 									<tr><td>Download size</td><td class="win">209 MiB</td><td>44%</td><td class="los">474 MiB</td></tr>
-									<tr><td>Image size</td><td class="win">896 MiB</td><td>37%</td><td class="los">2,424 MiB</td></tr>
+									<tr><td>Image size</td><td class="win">896 MiB</td><td>37%</td><td class="los">2424 MiB</td></tr>
 									<tr><td>Build date</td><td>2024-05-13</td><td></td><td>2024-03-15</td></tr>
 								</table>
 							</div>
@@ -126,20 +126,20 @@
 					<div class="row">
 						<div class="col-md-12 project-description">
 							<div class="project-info">
-								<h5>on Raspberry Pi 4</h5>
+								<h5>on Raspberry Pi 5 at 2024-05-25</h5>
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Raspberry Pi OS [%]</th><th>Raspberry Pi OS</th></tr>
-									<tr><td>RAM usage</td><td class="win">42Mi</td><td>58%</td><td class="los">74Mi</td></tr>
-									<tr><td>Running processes</td><td class="win">11</td><td>39%</td><td class="los">28</td></tr>
-									<tr><td>Disk usage</td><td class="win">531 MiB</td><td>41%</td><td class="los">1292 MiB</td></tr>
-									<tr><td>Pre-installed packages</td><td class="win">228</td><td>49%</td><td class="los">461</td></tr>
-									<tr><td>Boot duration</td><td class="win">14.856s</td><td>73%</td><td class="los">18.560s</td></tr>
-									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
-									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>RAM usage</td><td class="win">118 MiB</td><td>67%</td><td class="los">177 MiB</td></tr>
+									<tr><td>Running processes</td><td class="win">9</td><td>41%</td><td class="los">22</td></tr>
+									<tr><td>Disk usage</td><td class="win">882 MiB</td><td>40%</td><td class="los">2197 MiB</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">255</td><td>43%</td><td class="los">596</td></tr>
+									<tr><td>Boot duration</td><td class="win">6.220s</td><td>46%</td><td class="los">13.497s</td></tr>
+									<tr><td>Temporary files</td><td class="win">RAM disk (tmpfs)</td><td></td><td class="los">rootfs</td></tr>
+									<tr><td>Log files</td><td class="win">RAM disk (tmpfs)</td><td></td><td class="los">rootfs</td></tr>
 									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
-									<tr><td>Download size</td><td class="win">135.621.217 bytes</td><td>33%</td><td class="los">405.826.358 bytes</td></tr>
-									<tr><td>Image size</td><td class="win">889.331.712 bytes</td><td>49%</td><td class="los">1.816.133.632 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-04-22</td><td></td><td>2021-05-07</td></tr>
+									<tr><td>Download size</td><td class="win">178 MiB</td><td>43%</td><td class="los">414 MiB</td></tr>
+									<tr><td>Image size</td><td class="win">1024 MiB</td><td>39%</td><td class="los">2640 MiB</td></tr>
+									<tr><td>Build date</td><td>2024-05-13</td><td></td><td>2024-03-15</td></tr>
 								</table>
 							</div>
 						</div>
