--- a/stats.html
+++ b/stats.html
@@ -171,48 +171,24 @@
 					</div>
 				</div>
 				<div id="armbian2" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (minimal)</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
 							<div class="project-info">
-								<h5>on Odroid C4</h5>
+								<h5>Bookworm on NanoPi R4S at 2024-05-25</h5>
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Armbian [%]</th><th>Armbian</th></tr>
-									<tr><td>RAM usage</td><td class="win">129Mi</td><td>65%</td><td class="los">198Mi</td></tr>
-									<tr><td>Running processes</td><td class="win">12</td><td>34%</td><td class="los">35</td></tr>
-									<tr><td>Disk usage</td><td class="win">521.9M</td><td>36%</td><td class="los">1.4G</td></tr>
-									<tr><td>Pre-installed packages</td><td class="win">216</td><td>46%</td><td class="los">466</td></tr>
-									<tr><td>Boot duration</td><td class="los">16.528s</td><td>108%</td><td class="win">15.342s</td></tr>
-									<tr><td>Temporary files in RAM</td><td>Yes</td><td></td><td>Yes</td></tr>
-									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>RAM usage</td><td class="win">169 MiB</td><td>81%</td><td class="los">208 MiB</td></tr>
+									<tr><td>Running processes</td><td class="win">8</td><td>42%</td><td class="los">19</td></tr>
+									<tr><td>Disk usage</td><td class="win">816 MiB</td><td>65%</td><td class="los">1259 MiB</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">211</td><td>65%</td><td class="los">324</td></tr>
+									<tr><td>Boot duration</td><td class="los">10.028s</td><td>84%</td><td class="win">12.005s</td></tr>
+									<tr><td>Temporary files</td><td>RAM disk (tmpfs)</td><td></td><td>RAM disk (tmpfs)</td></tr>
+									<tr><td>Logs files</td><td>RAM disk (tmpfs)</td><td></td><td>compressed RAM disk (zram)</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
-									<tr><td>Download size</td><td class="win">161.822.824 bytes</td><td>44%</td><td class="los">364.990.872 bytes</td></tr>
-									<tr><td>Image size</td><td class="win">1.148.600.320 bytes</td><td>67%</td><td class="los">1.702.887.424 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-01-08</td><td></td><td>2021-05-07</td></tr>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div id="armbian3" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="close"></span></div></div>
-					<div class="row">
-						<div class="col-md-12 project-description">
-							<div class="project-info">
-								<h5>on NanoPi NEO3</h5>
-								<table>
-									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Armbian [%]</th><th>Armbian</th></tr>
-									<tr><td>RAM usage</td><td class="win">59Mi</td><td>60%</td><td class="los">98Mi</td></tr>
-									<tr><td>Running processes</td><td class="win">11</td><td>42%</td><td class="los">26</td></tr>
-									<tr><td>Disk usage</td><td class="win">575 MiB</td><td>40%</td><td class="los">1432 MiB</td></tr>
-									<tr><td>Pre-installed packages</td><td class="win">214</td><td>46%</td><td class="los">466</td></tr>
-									<tr><td>Boot duration</td><td class="win">16.364s</td><td>86%</td><td class="los">18.966s</td></tr>
-									<tr><td>Temporary files in RAM</td><td>Yes</td><td></td><td>Yes</td></tr>
-									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
-									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
-									<tr><td>Download size</td><td class="win">136.345.663 bytes</td><td>35%</td><td class="los">385.147.832 bytes</td></tr>
-									<tr><td>Image size</td><td class="win">795.869.184 bytes</td><td>42%</td><td class="los">1 883 242 496 bytes</td></tr>
-									<tr><td>Build date</td><td>2020-08-29</td><td></td><td>2021-05-07</td></tr>
+									<tr><td>Download size</td><td class="win">196 MiB</td><td>63%</td><td class="los">311 MiB</td></tr>
+									<tr><td>Image size</td><td class="win">1025 MiB</td><td>71%</td><td class="los">1444 MiB</td></tr>
+									<tr><td>Build date</td><td>2024-05-13</td><td></td><td>2024-05-25</td></tr>
 								</table>
 							</div>
 						</div>
@@ -277,35 +253,28 @@
 						<a href="#distrostats" class="thumbnail" rel="#raspberrypios1">
 							<img src="images/stats/raspberrypios.svg" alt="Raspberry Pi OS logo" width="8" height="5" loading="lazy">
 							<h3>Raspberry Pi OS Lite</h3>
-							<p>on Raspberry Pi 2 (32-bit)</p>
+							<p>on Raspberry Pi Zero W (32-bit)</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypios">
 						<a href="#distrostats" class="thumbnail" rel="#raspberrypios2">
 							<img src="images/stats/raspberrypios.svg" alt="Raspberry Pi OS logo" width="8" height="5" loading="lazy">
 							<h3>Raspberry Pi OS Lite</h3>
-							<p>on Raspberry Pi 4 (64-bit)</p>
+							<p>on Raspberry Pi 5 (64-bit)</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
 						<a href="#distrostats" class="thumbnail" rel="#armbian1">
 							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
-							<h3>Armbian</h3>
-							<p>on NanoPi R2S</p>
+							<h3>Armbian (minimal)</h3>
+							<p>on Odroid XU4</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
 						<a href="#distrostats" class="thumbnail" rel="#armbian2">
 							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
-							<h3>Armbian</h3>
-							<p>on Odroid C4</p>
-						</a>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
-						<a href="#distrostats" class="thumbnail" rel="#armbian3">
-							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
-							<h3>Armbian</h3>
-							<p>on NanoPi NEO3</p>
+							<h3>Armbian (minimal)</h3>
+							<p>on NanoPi R4S</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix debian">
