--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 					</div>
 				</div>
 				<div id="raspberrypi4" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi 2/3/4</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi 2/3/4/Zero 2</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -1824,7 +1824,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
 						<a href="#downloadinfo" class="thumbnail" rel="#raspberrypi4">
 							<img src="images/sbc_images/raspberrypi4.jpg" alt="Raspberry Pi 4 photo" width="8" height="5" loading="lazy">
-							<h3>Raspberry Pi 2/3/4</h3>
+							<h3>Raspberry Pi 2/3/4/Zero 2</h3>
 							<p>BCM2710/2711 | 4 Cores | ARMv8</p>
 						</a>
 					</div>
